# lidar_module

./: .gitignore  heaptrack.lidar_node.674580.zst  heaptrack.lidar_node.685474.zst  pointcloud_optimization_plan.md
config/: lidar_config.json
examples/: alternate_scheduler_demo.cpp
service/: zwkjLidar.service
service/config/: lidar_config.json
src/lidar_devices_module/: CMakeLists.txt  package.xml
src/lidar_devices_module/include/lidar/: lidar_base.hpp
src/lidar_devices_module/include/lidar/base/: data_struct.hpp  port_scan.hpp
src/lidar_devices_module/src/: main.cpp
src/lidar_module/: CMakeLists.txt  package.xml  pointcloud_optimization_plan.md
src/lidar_module/config/: lidar_config.json
src/lidar_module/include/base/: alternate_scheduler.hpp  convert_struct.h  crc_calculator.h  data_analysis.h  data_struct.h  port_scan.h  tools.h  type.hpp
src/lidar_module/include/broadcast_listener/: broadcast_listener.h
src/lidar_module/include/config/: config_struct.hpp
src/lidar_module/include/lidar/: lidar_base.h  lidar_manager.h  lidar_scan.h
src/lidar_module/include/lidar01/: lidar01.hpp
src/lidar_module/include/lidar_180/: lidar_r1.hpp
src/lidar_module/include/lidar_80/: lidar_01.hpp
src/lidar_module/include/lidar_creator/: lidar_creator.hpp
src/lidar_module/include/lidar_module/: lidar.h
src/lidar_module/include/lidar_node/: lidar_node.hpp
src/lidar_module/include/memory/: buffer_pool.h
src/lidar_module/include/network/: port_scan.h
src/lidar_module/include/node/: lidar_module.h
src/lidar_module/include/process/: data_analysis.h  process_work.h  process_worker.h
src/lidar_module/include/queue/: data_queue.h
src/lidar_module/include/sensor/lidar/: lidar_base.hpp  lidar_scan.hpp
src/lidar_module/include/sensor/lidar/base/: data_struct.hpp
src/lidar_module/include/sensor/motor/: motor_base.hpp
src/lidar_module/src/: main.cpp
src/lidar_module/src/broadcast_listener/: broadcast_listener.cc
src/lidar_module/src/lidar_module/: lidar.cc
src/lidar_module_mwt/: CMakeLists.txt  package.xml
src/lidar_module_mwt/config/: lidar_config.json
src/lidar_module_mwt/include/base/: convertStruct.h  crcCalculator.h  crc_calculator.h  dataStruct.h  data_struct.h  tools.h
src/lidar_module_mwt/src/: main.cpp
src/lidar_module_mwt/test/: specific_performance_test.cpp
test/: trigger.py
